--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://muhammadhabeebrahmam:reZXcnGvBiVHnQE5@cluster0.dzvia.mongodb.net/chat-app-db?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=Un2L/Lj0GpiDU05pU7HFoLl3odhCRAUvb4itZJ0sdHo=
+
+# NODE_ENV="development"
+NODE_ENV="production"
 # PORT=5000 
 # MONGODB_URI=your mogo adapted url with pass
 # JWT_SECRET= create this ky using in terminal > + git bash 
