instructions in readme.md update

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MONGODB_URI=mongodb+srv://muhammadhabeebrahmam:reZXcnGvBiVHnQE5@cluster0.dzvia.m
 JWT_SECRET=Un2L/Lj0GpiDU05pU7HFoLl3odhCRAUvb4itZJ0sdHo=
 
 # NODE_ENV="development"
-NODE_ENV="production"
+# NODE_ENV="production"
 # PORT=5000 
 # MONGODB_URI=your mogo adapted url with pass
 # JWT_SECRET= create this ky using in terminal > + git bash 
